--- a/privati/servizi-digitali/pagapoi/index.html
+++ b/privati/servizi-digitali/pagapoi/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PRESTITI ONLINE</title>
+    <title>PAGAPOI</title>
 </head>
 <body>
-    <p>PRESTITI ONLINE</p>
+    <p>PAGAPOI</p>
     
 </body>
 </html>
